--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,7 @@
     <title>Happy Birthday Shruti ❤️</title>
     <style>
         body {
-            overflow: hidden;
+/*             overflow: hidden; */
             background: linear-gradient(135deg, #ff7e5f, #feb47b);
             animation: gradient 15s ease infinite;
         }
